fixed scroll to top button visibility

--- a/css/modules/scroll-to-top.scss
+++ b/css/modules/scroll-to-top.scss
@@ -24,4 +24,8 @@
     text-decoration: none;
     color: $mainOrange;
   }
+
+  @include atSmall {
+    display: block;
+  }
 }
